--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
   compileSdkVersion 25
   buildToolsVersion "25.0.2"
   defaultConfig {
-    applicationId "com.crimson.addet"
+    applicationId "com.crimson.addect"
     minSdkVersion 17
     targetSdkVersion 25
     versionCode 1
@@ -18,6 +18,10 @@ android {
     release {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      buildConfigField 'boolean', "ENABLE_LOGGING", 'false'
+    }
+    debug {
+      buildConfigField 'boolean', "ENABLE_LOGGING", 'true'
     }
   }
   sourceSets {
@@ -38,18 +42,21 @@ dependencies {
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
-  compile 'com.android.support:appcompat-v7:25.2.0'
 
   //Dagger
-  compile 'com.google.dagger:dagger:2.4'
-  kapt 'com.google.dagger:dagger-compiler:2.4'
-  provided 'org.glassfish:javax.annotation:10.0-b28'
 
+  compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  compile 'com.android.support:appcompat-v7:25.2.0'
+  compile 'com.google.dagger:dagger:2.4'
   compile 'info.hoang8f:fbutton:1.0.5'
   compile 'uk.co.chrisjenx:calligraphy:2.2.0'
-
+  compile 'com.jakewharton.timber:timber:4.5.1'
+  compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
   testCompile 'junit:junit:4.12'
-  compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  kapt 'com.google.dagger:dagger-compiler:2.4'
+  kapt 'com.android.databinding:compiler:2.3.0'
+  provided 'org.glassfish:javax.annotation:10.0-b28'
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 repositories {
   mavenCentral()
