--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.crimson.addet">
+    package="com.crimson.addect">
 
   <application
-      android:name=".AddetApp"
+      android:name="com.crimson.addect.AddectApp"
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".feature.startscreen.StartScreenActivity">
+    <activity
+        android:name="com.crimson.addect.feature.startscreen.StartScreenActivity"
+        android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
+    </activity>
+    <activity
+        android:name="com.crimson.addect.feature.playscreen.PlayActivity"
+        android:screenOrientation="portrait">
     </activity>
   </application>
 
