--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,6 @@ dependencies {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
 
-  //Dagger
-
   compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   compile 'com.android.support:appcompat-v7:25.2.0'
   compile 'com.google.dagger:dagger:2.4'
@@ -57,6 +55,8 @@ dependencies {
   kapt 'com.android.databinding:compiler:2.3.0'
   provided 'org.glassfish:javax.annotation:10.0-b28'
   compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+  compile "io.reactivex:rxjava:1.2.4"
+  compile "io.reactivex:rxandroid:1.2.1"
 }
 repositories {
   mavenCentral()
